--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Estilos generales */
+/* ESTILOS GENERALES */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
 
 * {
@@ -16,40 +16,68 @@ input {
     display: none;
 }
 
+label:hover {
+    cursor: pointer;
+}
+
 .title {
     color: #fff;
     font-size: 32px;
-    margin-bottom: 30px;
+    margin: 30px 0 0 0;
 }
 
 .subtitle {
     color: #fff;
     font-size: 24px;
-    margin-bottom: 25px;
+    margin: 30px 0;
 }
 
 .btn {
     width: 120px;
     height: 40px;
-    margin-top: 30px;
+    margin: 30px 0;
     border-radius: 10px;
     border: none;
     color: #fff;
     background-color: deeppink;
 }
 
-/* Estilos section elegir jugador */
-#seleccionar-peleador {
+.btn:hover {
+    cursor: pointer;
+}
+
+/* ESTILOS DEL HEADER */
+header {
+    width: 100vw;
+    background: #1f1f1f;
+    padding: 10px 50px;
+}
+
+.image-container {
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+#logo img {
+    width: 50px;
+    height: 50px;
+    margin-right: 50px;
+    border-radius: 100%;
+    border: 2px solid deeppink;
+}
+
+/* ESTILOS SECTION SELECT PELEADOR */
+#section-select-peleador {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
 }
 
 .cards {
     display: flex;
-    gap: 10px;
+    gap: 15px;
 }
 
 .game-card {
@@ -71,10 +99,38 @@ input {
     margin: 0px 5px;
 }
 
-/* Estilos section elegir ataques */
+/* ESTILOS SECTION ATAQUES */
 
-#seleccionar-ataque {
+#section-ataques {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#btn-fisico {
+    margin: 0 0 30px 0;
+}
+
+#btn-magico {
+    margin: 0 0 30px 0;
+}
+
+#btn-especial {
+    margin: 0 0 30px 0;
+}
+
+#section-mensajes {
+    width: 280px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    margin: 0 0 30px 0;
+    border-radius: 10px;
+    background-color: deeppink;
+    color: #fff;
+}
+
+#btn-reset {
+    background: #333;
 }
