--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,25 @@
-/* ESTILOS GENERALES */
+/* General resets */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500;700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     font-family: 'Roboto', sans-serif;
     background: #333;
 }
-
 input {
     display: none;
 }
-
 label:hover {
     cursor: pointer;
 }
-
 input:checked + label {
     background-color: crimson;
 }
 
-.title {
-    color: #fff;
-    font-size: 32px;
-    margin: 30px 0 0 0;
-}
-
-.subtitle {
-    color: #fff;
-    font-size: 24px;
-    margin: 30px 0;
-}
-
+/* Buttons */
 .btn {
     width: 120px;
     height: 40px;
@@ -45,123 +29,177 @@ input:checked + label {
     color: #fff;
     background-color: deeppink;
 }
-
 .btn:hover {
     cursor: pointer;
+    transform: scale(1.1);
+}
+.movement__btn {
+    width: 80px;
+    margin: 10px;
+}
+.btns-ataque {
+    display: flex;
+    gap: 15px;
+}
+#btn-fisico {
+    margin: 0 0 30px 0;
+}
+#btn-magico {
+    margin: 0 0 30px 0;
+}
+#btn-especial {
+    margin: 0 0 30px 0;
+}
+.select-attacks__reset--btn {
+    background: #333;
 }
 
-/* ESTILOS DEL HEADER */
-header {
-    width: 100%;
+/* Tittles & subtitles */
+.title {
+    color: #fff;
+    font-size: 32px;
+    margin: 30px 0 0 0;
+}
+.subtitle {
+    color: #fff;
+    font-size: 24px;
+    margin: 30px 0;
+}
+
+/* Header */
+.header {
     background: #1f1f1f;
     padding: 10px 20px;
 }
-
-.image-container {
+.header__logo {
     display: flex;
     align-items: center;
     color: #fff;
 }
-
-.image-container p {
-    margin-left: 10px;
-}
-
-#logo img {
+.header__logo--icon {
     width: 50px;
     height: 50px;
     border-radius: 100%;
     border: 2px solid #fff;
 }
+.header__logo--text {
+    margin-left: 10px;
+}
 
-/* ESTILOS SECTION SELECT PELEADOR */
-#section-select-peleador {
+/* Select fighter section */
+.select-fighter {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
-.cards, .btns-ataque {
-    display: flex;
+.select-fighter__cards  {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 15px;
 }
-
-.game-card {
-    width: 180px;
-    height: 100px;
+.select-fighter__cards--info {
+    width: 200px;
+    height: 120px;
     background: deeppink;
     padding: 10px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 5px;
     color: #fff;
 }
-
-.game-card img {
+.select-fighter__cards--info:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+}
+.select-fighter__cards--info img {
     width: 85px;
     height: 85px;
     border-radius: 100%;
     margin: 0px 5px;
 }
 
-/* ESTILOS SECTION ATAQUES */
+/* Canvas section */
+.game-canvas {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.game-canvas__map {
+    border: 3px solid crimson;
+    border-radius: 10px;
+}
 
-#section-ataques {
+/* Select attacks section */
+.select-attacks {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-#btn-fisico {
-    margin: 0 0 30px 0;
-}
-
-#btn-magico {
-    margin: 0 0 30px 0;
-}
-
-#btn-especial {
-    margin: 0 0 30px 0;
-}
-
-#section-mensajes {
+.select-attacks__messages {
     width: 280px;
     display: flex;
     align-items: center;
     flex-direction: column;
     padding: 20px;
     margin: 0 0 30px 0;
+    text-align: center;
     border-radius: 10px;
     background-color: deeppink;
     color: #fff;
 }
-
-#btn-reset {
-    background: #333;
-}
-
-.counter-container {
+.select-attacks__counter {
     display: grid;
     grid-template-columns: 140px 140px;
+    margin-bottom: 20px;
     text-align: center;
     justify-content: center;
     color: white
 }
-
-#vidas-jugador, #vidas-enemigo {
+.counter__img--player1 img, .counter__img--player2 img {
+    width: 85px;
+    height: 85px;
+    border-radius: 100%;
+    margin: 0px 5px;
+}
+.counter__lives--player1, .counter__lives--player2 {
     font-size: 32px;
     margin: 5px 0;
 }
 
-@media (max-width: 540px) {
-    .cards, .btns-ataque {
+/* Queries */
+@media (max-width: 541px) {
+    .cards {
         display: flex;
         flex-direction: column;
     }
-
+    .select-fighter__cards {
+        grid-template-columns: 1fr;
+    }
+    .btns-ataque {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .select-attacks__messages {
+        margin-top: 20px;
+    }
+    #btn-fisico {
+        margin: 0;
+    }
+    #btn-magico {
+        margin: 0;
+    }
+    #btn-especial {
+        margin: 0;
+    }
     .title {
         text-align: center;
+    }
+    .game-canvas__map {
+        width: 300px;
+        height: 180px;
     }
 }
